# singleflight-agents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  how-it-works.md
examples/: langgraph_demo.py  openai_demo.py  raw_demo.py
src/singleflight_agents/: __init__.py  cli.py  engine.py  fingerprint.py  models.py  reporting.py  store.py
src/singleflight_agents/adapters/: __init__.py  langgraph.py  openai_agents.py
tests/: test_singleflight.py
