[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singleflight-agents"
version = "0.1.0"
description = "Stop paying twice for the same agent work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Andre Kostynowicz" }
]
keywords = ["agents", "llm", "singleflight", "dedupe", "langgraph", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/crithstudio-hash/singleflight-agents"
Repository = "https://github.com/crithstudio-hash/singleflight-agents"
Issues = "https://github.com/crithstudio-hash/singleflight-agents/issues"
Changelog = "https://github.com/crithstudio-hash/singleflight-agents/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["openai-agents"]
langgraph = ["langgraph"]
dev = ["pytest>=8.2"]

[project.scripts]
singleflight-agents = "singleflight_agents.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

